--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="Hello World Project" default="ifo">
+<project name="Hello World Project" default="info">
 <target name="info">
   <echo>Hello World Welcome to Ant Integration</echo>
 </target>
